<resources>
    <string name="app_name">GBitacora</string>
    <string name="descripcion_imagen">Descripción de la imagen</string>

    <!-- Login -->
    <string name="login_usuario">Nombre de usuario</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="toggle_password_visibility">Visibilidad</string>
    <string name="login_entrar">Entrar</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu home -->
    <string name="menu_home">GBitacora</string>
    <string name="menu_tanques">Tanques</string>
    <string name="menu_extintores">Extintores</string>
    <string name="menu_estaciones">Estaciones</string>
    <string name="menu_salir">Salir</string>
    <!-- Menu home -->

</resources>